# teranyina

./: .gitmodules  CMakeLists.txt  README.md  sln_make.cmd  teranyina-config.h.in
agent/: CMakeLists.txt  application.cpp  application.h  errno-check.h  files.cpp  files.h  logger.cpp  logger.h  main.cpp  sample.ini  ssl-wrapper.h  utils.cpp  utils.h
agent/lua/: global.cpp  globals.h
agent/subsystems/: addsubsys.py  subsys-clients.cpp  subsys-clients.h  subsys-control.cpp  subsys-control.h  subsys-fs.cpp  subsys-fs.h  subsys-iface.h  subsys-list.hxx  subsys-listeners.cpp  subsys-listeners.h  subsys-listerens.cpp  subsys-listerens.h  subsys-logging.cpp  subsys-logging.h  subsys-lua.cpp  subsys-lua.h  subsys-multicast.cpp  subsys-multicast.h  subsys-security.cpp  subsys-security.h  subsys.inc
client-core/: CMakeLists.txt  README.md  ta-client.cpp
client-core/impl/: impl-control.cpp  impl-file.cpp  impl-fs.cpp  impl-scripting.cpp
common/: CMakeLists.txt  result.hpp  utils.cpp  utils.h
ctrl-client/: CMakeLists.txt  addcmd.py  cmd-ctrl.cpp  cmd-fs.cpp  cmd-iface.h  cmd-list.h  cmd-scripting.cpp  main.cpp
include/client-core/: ta-client.h
include/client-core/iface/: IBaseIface.h  IControl.h  IFile.h  IFilesystem.h  IScripting.h
include/common/: logger.hpp  logger.hxx  result.hpp  ssl-wrapper.hpp
lua-build/: CMakeLists.txt
protocol/: README.md  common.proto  ctrl.proto  fs.proto  multicast.proto  protocol-constants.h  scripting.proto
server-core/: README.md
